[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "okgram"
version = "1.2.0"
description = "Full Instagram Private API client for Python that talks like the real Android app (OkHttp HTTP/2 + JA3/JA4 TLS impersonation)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "NiceDayZc" }]
maintainers = [{ name = "NiceDayZc" }]
keywords = [
    "instagram",
    "instagram-api",
    "instagram-private-api",
    "okhttp",
    "tls-fingerprint",
    "ja3",
    "http2",
    "reverse-engineering",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "pycryptodome>=3.18.0",
    "tls-client>=1.0.1",
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
media = ["Pillow>=9.0.0"]
socks = ["requests[socks]"]

[project.scripts]
okgram = "okgram.cli:main"

[project.urls]
Homepage = "https://github.com/NiceDayZc/okgram"
Repository = "https://github.com/NiceDayZc/okgram"
Issues = "https://github.com/NiceDayZc/okgram/issues"

[tool.setuptools.packages.find]
include = ["okgram*"]
exclude = ["examples*", "apk*", "tests*"]
